2007-08-10  Miguel de Icaza  <miguel@novell.com>

	* generic.cs (DefaultValueExpression): Add CloneTo support to this
	as well. 

 2007-08-09  Marek Safar  <marek.safar@gmail.com>
 
	** C# 3.0 Anonymous Types (update to the latest standard)
	
	* cs-parser.jay: Updated parameters and type names.

2007-08-03  Raja R Harinath  <harinath@gmail.com>

	* cs-parser.jay (class_declaration): Update to changes in class.cs.
	Move calling of	'AddBasesForPart' to ...
	(class_bases): ... here.
	(struct_declaration, interface_declaration): Update to changes.

2007-08-02  Raja R Harinath  <harinath@gmail.com>

	Reduce some differences between cs-parser.jay in mcs/ and gmcs/.
	* cs-parser.jay: Some whitespace cleanups.
	(method_header): Refer to the correct symbol for parameters.

2007-08-01  Marek Safar  <marek.safar@gmail.com>

	A fix for bug #82181
	* cs-parser.jay: Ignore partial keyword inside block expression.
	
2007-08-01  Marek Safar  <marek.safar@gmail.com>

	** C# 3.0 Type Inference (major bits are working)
	
	* generic.cs: Introduced new abstract class as an entry point to type
	inference. Old type inference moved to TypeInferenceV2. Implemented C# 3.0
	type inference as descibed in the standard in TypeInferenceV2 class.
	
	* linq.cs (ALinqExpression): Disabled caching because it's wrong.
	
2007-07-25  Jb Evain  <jbevain@novell.com>

	* Makefile: don't install on net_2_1.

2007-07-18  Marek Safar  <marek.safar@gmail.com>

	* cs-parser.jay: Use ImplicitLambdaParameter everywhere.

2007-07-17  Marek Safar  <marek.safar@gmail.com>

	* cs-parser.jay: Correct placeholder for implicit linq parameter.
	
	* linq: Add ImplicitArgument.

2007-07-03  Marek Safar  <marek.safar@gmail.com>

	* cs-parser.jay: Switch to ImplicitLambdaParameter.

2007-07-03  Marek Safar  <marek.safar@gmail.com>

	* cs-parser.jay: Initialize implicit_value_parameter_type for interface
	members too.
	
	* linq.cs (QueryExpression.DoResolve): Resolve implicitly typed query
	variable.
	