@@ -1,9 +1,15 @@
+2007-08-11  Marek Safar  <marek.safar@gmail.com>
+
+	A fix for bug #82412
+	* generics.cs (TypeInferenceContext.LowerBoundInference): Don't 
+	terminate type inference when an array is not paired.
+	
 2007-08-10  Miguel de Icaza  <miguel@novell.com>
 
 	* generic.cs (DefaultValueExpression): Add CloneTo support to this
 	as well. 
 
- 2007-08-09  Marek Safar  <marek.safar@gmail.com>
+2007-08-09  Marek Safar  <marek.safar@gmail.com>
  
 	** C# 3.0 Anonymous Types (update to the latest standard)
 	
